# thornychat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml  app.rc  build.rs
crates/app/src/: logging.rs  main.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: client.rs  commands.rs  error.rs  events.rs  key_backup.rs  lib.rs  media.rs  push.rs  search.rs  session.rs  store.rs  sync.rs  verification.rs
crates/client-core/src/calls/: mod.rs  webrtc_session.rs
crates/client-core/src/rooms/: emoji_packs.rs  mod.rs  power_tags.rs  room_list.rs  spaces.rs  timeline.rs
crates/ui/: Cargo.toml
crates/ui/benches/: text_render.rs
crates/ui/src/: animated_image.rs  chat_config.rs  clipboard_paste.rs  connectors_config.rs  emoji_picker.rs  encryption_config.rs  lib.rs  media_cache.rs  message.rs  privacy_config.rs  slash.rs  spellcheck.rs  spellcheck_config.rs  state.rs  steam.rs  subscriptions.rs  synthetic_input.rs  theme.rs  theme_config.rs  tweets.rs  twemoji.rs  update.rs  upscale.rs  video_player.rs  view.rs  window_config.rs
crates/ui/src/connectors/: epic.rs  gog.rs  mod.rs  process.rs  reg.rs  steam.rs
crates/ui/src/platform/: autostart.rs  file_dialog.rs  mod.rs  notifications.rs  tray.rs
crates/ui/src/screens/: dm_search.rs  mod.rs
crates/ui/src/screens/call/: mod.rs
crates/ui/src/screens/login/: mod.rs
crates/ui/src/screens/room_list/: mod.rs
crates/ui/src/screens/settings/: appearance.rs  connectors.rs  encryption.rs  general.rs  manual.rs  mod.rs  notifications.rs  privacy.rs  room_admin.rs
crates/ui/src/screens/space_explorer/: mod.rs
crates/ui/src/screens/timeline/: composer.rs  mod.rs  reactions.rs  threads.rs
crates/ui/src/screens/verification/: mod.rs
crates/ui/src/widgets/: attachment_preview.rs  avatar.rs  lightbox_image.rs  markdown_view.rs  member_pill.rs  mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
scripts/: build-zen-release.ps1
