[workspace]
resolver = "2"
members = [
    "crates/client-core",
    "crates/ui",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Dominik Wölki"]
license = "GPL-3.0-or-later"
repository = "https://github.com/DDQW/thornychat"

[workspace.dependencies]
# Matrix protocol
matrix-sdk = { version = "0.18", default-features = false, features = [
    "sqlite",
    "e2e-encryption",
    "sso-login",
    "markdown",
    "automatic-room-key-forwarding",
] }
matrix-sdk-ui = { version = "0.18", default-features = false }
matrix-sdk-sqlite = { version = "0.18", features = ["state-store", "crypto-store", "event-cache", "bundled"] }

# GUI
iced = { version = "0.14", features = ["tokio", "image", "svg", "advanced", "lazy", "markdown", "selector"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"

# Windows platform integration
keyring = { version = "4", features = ["windows-native-keyring-store"] }
tray-icon = "0.24"
# 0.61 to match what wry 0.55 / webview2-com 0.38 already compile — sharing
# one windows-rs version lets the video player's fullscreen code talk to the
# raw WebView2 COM interfaces with unified types (no cross-version skew), and
# drops the otherwise-separate 0.58 build.
windows = { version = "0.61", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_System_Registry",
    "UI_ViewManagement",
    # Windows Spell Checking API (ISpellChecker) + the COM plumbing to create
    # it — backs the composer's spell check / autocorrect.
    "Win32_Globalization",
    "Win32_System_Com",
    # Bare child-window plumbing for the inline video player's clip host
    # (see ui::video_player) — the webview is clipped to the timeline
    # viewport by parenting it inside a plain Win32 child window.
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    # SendInput, for the composer right-click menu's Cut/Copy: iced's
    # text_input owns its selection, so the menu drives the widget's own
    # native copy/cut by synthesizing the Ctrl chord (see ui::synthetic_input).
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    # CreateToolhelp32Snapshot / Process32*W for the game-launcher connectors'
    # running-process match (GOG/Epic expose no "running game" key like Steam's).
    "Win32_System_Diagnostics_ToolHelp",
] }
rfd = "0.17"
# Clipboard *content* for paste-to-attach (files via CF_HDROP, bitmaps):
# iced's own clipboard API is text-only, so the composer's Ctrl+V handler
# reads the rest through arboard.
arboard = "3.6"

# Calls
webrtc = "0.13"

# Media / content rendering
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp"] }
# Embedded YouTube playback: hosts the iframe player in a WebView2 child
# window over the iced surface (Windows ships the WebView2 runtime).
wry = "0.55"
# Raw WebView2 COM interface + typed event-handler helpers — used directly
# (alongside wry) to honor the player's fullscreen button, which wry itself
# doesn't surface (see ui::video_player). Same version wry pins, so no extra
# crate in the build.
webview2-com = "0.38"
raw-window-handle = "0.6"
pulldown-cmark = "0.13"
linkify = "0.11"
emojis = "0.9"

# Utility
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
qrcode = "0.14"
open = "5"
uuid = { version = "1", features = ["v4"] }

client-core = { path = "crates/client-core" }
ui = { path = "crates/ui" }

[profile.dev]
# matrix-sdk's crypto deps are slow to build unoptimized; keep dev builds usable
opt-level = 0
# Disk space is tight in this environment; full debug info roughly doubles
# target/ size (large .pdb files) for no benefit since we aren't attaching a
# debugger. Drop it — panics still show file:line via the `RUST_BACKTRACE`
# unwind machinery, just not a full symbol table.
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
