[package]
name = "thornychat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "thornychat"
path = "src/main.rs"

[dependencies]
client-core = { workspace = true }
ui = { workspace = true }

iced = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }

# Icon/version-info embedding (embed-resource crate + build.rs) is added in
# Phase 7 alongside MSIX packaging, not needed for the app to run.
