[package]
name = "thornychat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "thornychat"
path = "src/main.rs"

[dependencies]
client-core = { workspace = true }
ui = { workspace = true }

iced = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }

[build-dependencies]
# Compiles app.rc (exe icon for Explorer/taskbar) into the binary. The
# version-info block and MSIX packaging remain Phase 7.
embed-resource = "3"
