[package]
name = "thornychat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "thornychat"
path = "src/main.rs"

[dependencies]
client-core = { workspace = true }
ui = { workspace = true }

iced = { workspace = true }
tokio = { workspace = true }
# Decodes the embedded window icon (see main.rs) — already compiled for the
# ui crate, so this is a new direct edge, not a new crate in the build.
image = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }

[build-dependencies]
# Compiles app.rc (exe icon for Explorer/taskbar) into the binary. The
# version-info block and MSIX packaging remain Phase 7.
embed-resource = "3"
