[package]
name = "ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
client-core = { workspace = true }
matrix-sdk = { workspace = true }

iced = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

pulldown-cmark = { workspace = true }
linkify = { workspace = true }
emojis = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }

rfd = { workspace = true }
arboard = { workspace = true }
windows = { workspace = true }
tray-icon = { workspace = true }
wry = { workspace = true }
webview2-com = { workspace = true }
raw-window-handle = { workspace = true }

tracing = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = "2"
open = { workspace = true }

# Twemoji SVGs are fetched from a public CDN (not Matrix media), cached to
# disk — reqwest is already in the dependency tree transitively via
# matrix-sdk, so this doesn't add a new crate to the build, just a new
# direct edge to one already being compiled.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

[dev-dependencies]
# `default-features = false` drops the plotters/rayon HTML-report stack —
# the terminal output carries the same statistics, and this keeps a dev-only
# dependency from dragging a second parallelism runtime into the tree.
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "text_render"
harness = false
